version 1.9.1, in progress
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- wls: amend the criterion for complaining that the weights
  are all zero
- logit/probit: correct ordering of estimates when the
  constant is not first in the supplied list of regressors
- OS X: use the native Mac calculator app for gretl's
  calculator toolbar item by default
- GUI: add mechanism for defining named lists, and for
  setting the main window selection from a chosen list
- GUI model selection dialog: implement re-ordering of 
  regressors via right-click
- GUI, right-click popup in main window: on selecting the
  correlation matrix option, give the user a chance to 
  insist on a uniform sample for the correlations
- Remove the old genpois function

05-02-2010 version 1.9.0
- New command: "duration", for estimation of parametric
  duration models (e.g. Weibull)
- New command: "negbin", for estimation of count data
  models using the Negative Binomial distribution
- poisson regression: add overdispersion test and also
  --robust option to get a QML covariance matrix
- New command modifier, "catch" to catch errors and
  permit continuation of script execution
- "labels" command: add options to write variable labels
  to file, and to read labels from file
- Consolidate commands: the old "graph" and "plot"
  commands (ASCII graphics) are unified in "textplot"
- Enable full-text search of "online" help files
- Enable help for specific "settable" variables, as in
  "help set lbfgs"
- "mread": search the gretl working directory if the
  file is not found at first
- "dataset sortby": allow the use of a list to specify 
  multiple sort keys
- ODBC import: enable extraction of multiple data series
  per SQL query
- ODBC: enable support in the binary packages for OS X
- Observation labels: permit non-ASCII UTF-8 characters
- Export of data to R, interactively: add a message
  confirming that the export worked